change to custom domain

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
     
   favicon: "imgs/favicon.svg"
   twitter-card: true
-  site-url: "https://connortwiegand.github.io"
+  site-url: "ctwie.me"
   # repo-url: https://github.com/connortwiegand/https://github.com/connortwiegand/connortwiegand.github.io
   # repo-link-target: "_blank"
   ## Doc-level: set `repo-actions: false` to surpress link to repo on page
