--- a/_quarto.yml
+++ b/_quarto.yml
@@ -80,7 +80,7 @@ website:
         target: _blank
       - text:  <i class="fa-brands fa-orcid"></i> ORCID
         # icon: "{{< fa brands orcid >}}" 
-        href: "http://orcid.org/0009-0004-3349-3742"
+        href: "https://orcid.org/0009-0004-3349-3742"
         target: _blank
 
   page-footer: 
