--- a/proj/projects.yml
+++ b/proj/projects.yml
@@ -3,13 +3,15 @@
     - title: Time-Varying Time Preferences
       co_auth: "_With [Mike Kuhn](https://www.makuhn.net/) and [M. Steven Holloway](https://mstevenholloway.mmm.page/home)_"
       draft_avail: true
-      path: "research-pages/tvtp.qmd"
+      path: "research-pages/tvtp/index.qmd"
+      download: "research-pages/tvtp/tvtp.pdf"
       abstract: |
         Dynamic inconsistency in intertemporal choice has long been considered a hallmark of non-exponential discounting.  Recent work has challenged this view from a variety of perspectives, including the view that time variance --shifting preferences between measurement dates-- can also explain apparent preference reversals.  While a nascent literature identifies time-variance and demonstrates its role in explaining time-inconsistency, we lack both a model that allows time-variance to tractably interact with  other properties of time preference, and a longitudinal study of sufficient depth to identify such a model.  In this paper, we develop the ``nested exponential'' discount function which is general with respect to time-invariance, time-consistency, and stationarity.  The function nests both exponential discounting and a version of present-biased discounting within its parameter space, enabling transparent model selection at both the aggregate and subject levels.  We evaluate time-invariance and the performance of the nested exponential model in a 12-week longitudinal study featuring seven surveys.  Our elicitations give us unprecedented precision in estimating dynamic inconsistency, non-stationarity, and time-variance.  We find that subjects in our study exhibit significant decreasing patience over the course of the study, and that time-variance explains roughly 72\% of time-inconsistent choices in our data.  This does not mean our data are best-explained by exponential discounting plus preference drift: hyperbolicity is a key feature of our data, and it is well captured by the nested exponential function.
     - title: Trust and AI
       co_auth: "_With [Jiabin Wu](https://sites.google.com/site/jiabinwuecon), [Ethan Holdahl](https://ethanholdahl.com/), and [Tanner Bivins](https://www.tannerbivins.com/)_"
       draft_avail: true
-      path: "research-pages/trust-and-ai.qmd"
+      path: "research-pages/trust/index.qmd"
+      download: "research-pages/trust/trust-and-ai.pdf"
       abstract: |
         In this study, we experimentally explore the impact of AI as a supportive tool for players in a two-player trust game. The game begins with the trustee sending a message to the trustor. In certain scenarios, the trustee is aided by the large language model (LLM) ChatGPT in composing this message. In other scenarios, the trustor uses AI to interpret the message from the trustee, or both players may have access to AI assistance. Our findings indicate that when the trustee utilizes AI as a helper, it enhances cooperation with the trustor. Interestingly, this improvement in cooperation is not attributed to AI's superior messaging skills. Instead, when the trustee has AI assistance, it may encourage the trustor to scrutinize the trustee's message more closely. The detailed scrutiny by the trustor, and potentially the trustee's awareness of this scrutiny, aligns the beliefs of the trustor and the trustee, thereby fostering an environment that encourages the development of trust.
     - title: "Multiple Lottery Lists"
