--- a/proj/projects.yml
+++ b/proj/projects.yml
@@ -15,6 +15,11 @@
       abstract: |
         In this study, we experimentally explore the impact of AI as a supportive tool for players in a two-player trust game. The game begins with the trustee sending a message to the trustor. In certain scenarios, the trustee is aided by the large language model (LLM) ChatGPT in composing this message. In other scenarios, the trustor uses AI to interpret the message from the trustee, or both players may have access to AI assistance. Our findings indicate that when the trustee utilizes AI as a helper, it enhances cooperation with the trustor. Interestingly, this improvement in cooperation is not attributed to AI's superior messaging skills. Instead, when the trustee has AI assistance, it may encourage the trustor to scrutinize the trustee's message more closely. The detailed scrutiny by the trustor, and potentially the trustee's awareness of this scrutiny, aligns the beliefs of the trustor and the trustee, thereby fostering an environment that encourages the development of trust.
     - title: "Multiple Lottery Lists"
+      no_link: true
+      co_auth: "_With [Mike Kuhn](https://www.makuhn.net/) and [M. Steven Holloway](https://mstevenholloway.mmm.page/home)_"
+      abstract: |
+        Holloway _et al._ (working paper) conduct a longitudinal experiment in order to study agents who display time preferences matching discounting functions which are inconsistent, time-variant, and/or non-stationary. The elicitation developed for the purposes of that study combines aspects of the two leading techniques for elicitating preferences across both risk and time: (double) multiple-price lists _a la_ Andersen _et al._ (2008) and convex time budgets as pioneered by Andreoni and Sprenger (2012). This elicitation is a novel iplementation of so-called _Multiple Lottery Lists_, and has numerous advantages compared to similar techniques. The elicitation and compensation mechanisms are designed in such a way as to incentivize truthfull reporting of ones own preferences while simultaneously keeping experiment costs low. The experiment was developed in a relateively portable manner, yet the data remain rich and well-structured. Further details of the elicitation device, including it's implementation and advantages, is presented in this paper. 
+        
 
 - category: Publications
   papers:
