update pubs style and encycl. entry to reflect date

--- a/proj/projects.yml
+++ b/proj/projects.yml
@@ -25,8 +25,9 @@
   papers:
     - title: Market Failure
       co_auth: "_With [Van Kolpin](https://pages.uoregon.edu/vkolpin/Home.html)_"
-      journal: The Elgar Encyclopedia on the Economics of Competition, Regulation and Antitrust
-      year: forthcoming
+      journal: The Elgar Encyclopedia on the Economics of Competition, Regulation, and Antitrust
+      year: November 2024
+      fc: true
       editor: Michael D. Noel
       publisher: 
         - name: Edward Elgar Publishing
