--- a/teaching/_files/_IoR.yml
+++ b/teaching/_files/_IoR.yml
@@ -1,7 +1,7 @@
 
 - title: Introduction to Game Theory
   number: EC 327
-  terms: Summer 2022, Fall 2022, Winter 2023, Spring 2024 
+  terms: Summer 2022, Fall 2022, Winter 2023, Spring 2024, Spring 2025 
   info: Introductory course in game theory. Develops game-theoretic methods of rational decision making and equilibriums, using many in-class active games.
   repo_slug: ec327-sp24
 
